--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
     <body>
         <header id="header">
             <div>
-                <a>Robert Sanders Jr</a>
+                <a id="logo">Robert Sanders Jr.</a>
                 <nav>
-                    <a>Biography</a>
-                    <a>Work</a>
-                    <a>Contact</a>
+                    <ul>
+                        <li>
+                            <a href="#bio">Biography</a>
+                        </li>
+                        <li>
+                            <a href="#work">Work</a>
+                        </li>
+                        <li>    
+                            <a href="#contact">Contact</a>
+                        </li>    
+                    </ul>
                 </nav>
             </div>
         </header>
@@ -23,16 +31,15 @@
         <main id="main-container" class="container">
             <section id="bio">
                 <h1>Bio</h1>
-                <img>
-                <p>
+                <h3>
                     As a Detroit-native, I find joy in creativity
-                </p>
-                <p>
+                </h3>
+                <h3>
                     In turn, creativity is what sparked my interest in web development
-                </p>
-                <p>
-                    Thus, development of user-friendly web design for African Americans is my end goal
-                </p>
+                </h3>
+                <h3>
+                    Thus, development of creative web design is my goal
+                </h3>
             </section>
             <section id="work">
                 <h1>Work</h1>
@@ -50,7 +57,7 @@
                 </div>
             </section>
             <section id="contact">
-                <h1>Contact Me</h1>
+                <h1>Contact</h1>
             </section>
 
         </main>
