--- a/index.html
+++ b/index.html
@@ -1,70 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>R.Sanders's Portfolio</title>
-
     </head>
-    
     <body>
-        <header id="header">
-            <div>
-                <a id="logo">Robert Sanders Jr.</a>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#bio">Biography</a>
-                        </li>
-                        <li>
-                            <a href="#work">Work</a>
-                        </li>
-                        <li>    
-                            <a href="#contact">Contact</a>
-                        </li>    
-                    </ul>
-                </nav>
+        <section class="hero">
+            <nav>
+                <img  class="logo" src="images/bulb_on.svg" alt="light bulb logo"/>
+                <ul>
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="#my-work">My Work</a></li>
+                    <li><a href="#contact-me">Contact Me</a></li>
+                </ul>
+            </nav>
+            <div class="hero-area">
+                <div class="hero-text">
+                    <h1>Robert Sanders Jr</h1>
+                    <p>Web Developer</p>
+                </div>
             </div>
-        </header>
-
-        <main id="main-container" class="container">
-            <section id="bio">
-                <h1>Bio</h1>
-                <h3>
-                    As a Detroit-native, I find joy in creativity
-                </h3>
-                <h3>
-                    In turn, creativity is what sparked my interest in web development
-                </h3>
-                <h3>
-                    Thus, development of creative web design is my goal
-                </h3>
-            </section>
-            <section id="work">
-                <h1>Work</h1>
-                <div id="pro1">
-                    <img>
-                    <h3>Code Refactoring</h3>
+        </section>
+        <section class="sub-section" id="about-me">
+            <div class="info">
+                <h2>About Me</h2>
+                <p>Greetings and welcome to my page. I am an aspiring software developer and Detroit-native.</p>
+                <div class="headshot-container">
+                    <img class="headshot" src="images/profile pic.jpg" alt="author's picture"/>
                 </div>
-                <div id="pro2">
-                    <img>
-                    <h3>TBD</h3>
-                </div>
-                <div id="pro3">
-                    <img>
-                    <h3>TBD</h3>
-                </div>
-            </section>
-            <section id="contact">
-                <h1>Contact</h1>
-            </section>
-
-        </main>
-
-        <footer>
-
+            </div>
+        </section>
+        <section class="sub-section-deux" id="my-work">
+            <h2>My Work</h2>
+            <div class="project-container">
+                <img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/>
+                <h3>Project 1</h3>
+                <p class="subtext">showcases my ability to refactor pre-existing code</p>
+                <hr/>
+                <p class="subtext"><a class="click"  href="https://github.com/RSANDERS2/rsanders2.github.io-horiseon">Click here</a></p>
+                <img class="project-image" src="images/TBD.jpeg" alt="to be determined"/>
+                <h3>Project 2</h3>
+                <p class="subtext">lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, impedit?</p>
+                <img class="project-image" src="images/TBD.jpeg" alt="to be determined"/>
+                <h3>Project 3</h3>
+                <p class="subtext">lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, repellat.</p>
+            </div>
+        </section>
+        <footer id="contact-me">
+            <h2>Contact me</h2>
+            <p>robert.sanders24@gmail.com</p>
         </footer>
-
     </body>
-</html>
+</html>        
+ 
