made picture a clickable link and used transform property to change picture size when hovered

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
             <nav>
                 <img  class="logo" src="images/bulb_on.svg" alt="light bulb logo"/>
                 <ul>
-                    <li><a href="#about-me">About me</a></li>
-                    <li><a href="#my-work">My Work</a></li>
-                    <li><a href="#contact-me">Contact Me</a></li>
+                    <li><a href="#about-me">About</a></li>
+                    <li><a href="#my-work">Work</a></li>
+                    <li><a href="#contact-me">Contact </a></li>
                 </ul>
             </nav>
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Robert Sanders Jr</h1>
-                    <p>Web Developer</p>
                 </div>
             </div>
         </section>
@@ -37,11 +36,10 @@
         <section class="sub-section-deux" id="my-work">
             <h2>My Work</h2>
             <div class="project-container">
-                <img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/>
+                <a href="https://github.com/RSANDERS2/rsanders2.github.io-horiseon"><img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/></a>
                 <h3>Project 1</h3>
                 <p class="subtext">showcases my ability to refactor pre-existing code</p>
                 <hr/>
-                <p class="subtext"><a class="click"  href="https://github.com/RSANDERS2/rsanders2.github.io-horiseon">Click here</a></p>
                 <img class="project-image" src="images/TBD.jpeg" alt="to be determined"/>
                 <h3>Project 2</h3>
                 <p class="subtext">lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, impedit?</p>
@@ -51,7 +49,7 @@
             </div>
         </section>
         <footer id="contact-me">
-            <h2>Contact me</h2>
+            <h2>Email</h2>
             <p>robert.sanders24@gmail.com</p>
         </footer>
     </body>
