added media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="sub-section" id="about-me">
             <div class="info">
                 <h2>About Me</h2>
-                <p>Greetings and welcome to my page. I am an aspiring software developer and Detroit-native.</p>
+                <p>Greetings and welcome to my page. I am a Detroit-native and an aspiring software developer.</p>
                 <div class="headshot-container">
                     <img class="headshot" src="images/profile pic.jpg" alt="author's picture"/>
                 </div>
@@ -48,10 +48,12 @@
                 <p class="subtext">lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, repellat.</p>
             </div>
         </section>
-        <footer id="contact-me">
-            <h2>Email</h2>
-            <p>robert.sanders24@gmail.com</p>
-        </footer>
+        <div class="footer-container">
+            <footer id="contact-me">
+                <h2>Email</h2>
+                <p class="footer-email">robert.sanders24@gmail.com</p>
+            </footer>
+        </div>
     </body>
 </html>        
  
