added new projects (photos and urls)

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
         <section class="sub-section-deux" id="my-work">
             <h2>My Work</h2>
             <div class="project-container">
-                <a href="https://github.com/RSANDERS2/rsanders2.github.io-horiseon"><img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/></a>
+                <a href="https://rsanders2.github.io/rsanders2.github.io-coderefactor/"><img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/></a>
                 <h3>Project 1</h3>
-                <p class="subtext">showcases my ability to refactor pre-existing code</p>
-                <hr/>
-                <img class="project-image" src="images/TBD.jpeg" alt="to be determined"/>
+                <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-coderefactor</p>
+                <a href="https://mtkfolger.github.io/NUSIC/"><img class="project-image" src="images/group project 1.jpg" alt="NUSIC website"/></a>
                 <h3>Project 2</h3>
-                <p class="subtext">lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, impedit?</p>
-                <img class="project-image" src="images/TBD.jpeg" alt="to be determined"/>
+                <p class="subtext">https://github.com/mtkfolger/NUSIC</p>
+                <a href=""><img class="project-image" src="images/scheduler photo.jpg" alt="Day Planner Website"/></a>
                 <h3>Project 3</h3>
-                <p class="subtext">lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, repellat.</p>
+                <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-scheduler</p>
+                <a href="https://rsanders2.github.io/rsanders2.github.io-passwordgenerator/"><img class="project-image" src="images/password generator.jpg" alt="Password Generator Website"/></a>
+                <h3>Project 4</h3>
+                <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-passwordgenerator</p>
             </div>
         </section>
         <div class="footer-container">
