increased spacing between projects using css

--- a/index.html
+++ b/index.html
@@ -36,18 +36,31 @@
         <section class="sub-section-deux" id="my-work">
             <h2>My Work</h2>
             <div class="project-container">
+
+                <div id="pro1">
                 <a href="https://rsanders2.github.io/rsanders2.github.io-coderefactor/"><img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/></a>
                 <h3>Project 1</h3>
                 <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-coderefactor</p>
+                </div>  
+
+                <div id="pro2">
                 <a href="https://mtkfolger.github.io/NUSIC/"><img class="project-image" src="images/group project 1.jpg" alt="NUSIC website"/></a>
                 <h3>Project 2</h3>
                 <p class="subtext">https://github.com/mtkfolger/NUSIC</p>
+                </div>
+
+                <div id="pro3">
                 <a href=""><img class="project-image" src="images/scheduler photo.jpg" alt="Day Planner Website"/></a>
                 <h3>Project 3</h3>
                 <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-scheduler</p>
+                </div>
+
+                <div id="pro4">
                 <a href="https://rsanders2.github.io/rsanders2.github.io-passwordgenerator/"><img class="project-image" src="images/password generator.jpg" alt="Password Generator Website"/></a>
                 <h3>Project 4</h3>
                 <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-passwordgenerator</p>
+                </div>
+                
             </div>
         </section>
         <div class="footer-container">
