updated spacing for page items (css)

--- a/index.html
+++ b/index.html
@@ -36,37 +36,45 @@
         <section class="sub-section-deux" id="my-work">
             <h2>My Work</h2>
             <div class="project-container">
-
-                <div id="pro1">
-                <a href="https://rsanders2.github.io/rsanders2.github.io-coderefactor/"><img class="project-image" src="images/Horiseon screenshot.JPG" alt="refactoring project"/></a>
-                <h3>Project 1</h3>
-                <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-coderefactor</p>
-                </div>  
-
+                
                 <div id="pro2">
                 <a href="https://mtkfolger.github.io/NUSIC/"><img class="project-image" src="images/group project 1.jpg" alt="NUSIC website"/></a>
-                <h3>Project 2</h3>
+                <h3>Nusic Website</h3>
                 <p class="subtext">https://github.com/mtkfolger/NUSIC</p>
                 </div>
 
                 <div id="pro3">
                 <a href=""><img class="project-image" src="images/scheduler photo.jpg" alt="Day Planner Website"/></a>
-                <h3>Project 3</h3>
+                <h3>Scheduler Website</h3>
                 <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-scheduler</p>
                 </div>
 
                 <div id="pro4">
                 <a href="https://rsanders2.github.io/rsanders2.github.io-passwordgenerator/"><img class="project-image" src="images/password generator.jpg" alt="Password Generator Website"/></a>
-                <h3>Project 4</h3>
+                <h3>Generator Website</h3>
                 <p class="subtext">https://github.com/RSANDERS2/rsanders2.github.io-passwordgenerator</p>
                 </div>
-                
+
             </div>
         </section>
         <div class="footer-container">
             <footer id="contact-me">
                 <h2>Email</h2>
-                <p class="footer-email">robert.sanders24@gmail.com</p>
+
+                <div id="email-link">
+                <a href="robert.sanders24@gmail.com">click here</a>
+                </div>
+
+                <div id="linkedIn-link">
+                <h2>LinkedIn</h2>
+                <a href="www.linkedin.com/in/robert-sanders-jr-mph-b3837690">click here</a>
+                </div>
+
+                <div id="resume-link">
+                <h2>Resume</h2>
+                <a href="https://docs.google.com/document/d/1eVHk5RmZgc5ZNvSA5ptf8vcr4OVBb0vqDtCXFN3oVhI/edit?usp=sharing">click here</a>
+                </div>
+
             </footer>
         </div>
     </body>
