--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <h2>Email</h2>
 
                 <div id="email-link">
-                <a href="robert.sanders24@gmail.com">click here</a>
+                <a href="#">https://robert.sanders24@gmail.com</a>
                 </div>
 
                 <div id="linkedIn-link">
                 <h2>LinkedIn</h2>
-                <a href="www.linkedin.com/in/robert-sanders-jr-mph-b3837690">click here</a>
+                <a href="https://www.linkedin.com/in/robert-sanders-jr-mph-b3837690">click here</a>
                 </div>
 
                 <div id="resume-link">
