--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div id="pro5">
-                <a href="https://quiet-tundra-45421.herokuapp.com/"><img class="project-image" src="images/password generator.jpg" alt="Recipe Website"/></a>
+                <a href="https://quiet-tundra-45421.herokuapp.com/"><img class="project-image" src="images/recipe screenshot.jpg" alt="Recipe Website"/></a>
                 <h3>Recipe Website</h3>
                 <p class="subtext">https://github.com/nightmarefails/mylittlerecipe</p>
                 </div>
