added profile pic

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>About Me</h2>
                 <p>Greetings and welcome to my page. I am a Detroit-native and an aspiring software developer.</p>
                 <div class="headshot-container">
-                    <img class="headshot" src="" alt="author's picture"/>
+                    <img class="headshot" src="images/profile pic.jpg" alt="author's picture"/>
                 </div>
             </div>
         </section>
